apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: apps
spec:
  selector:
    app.kubernetes.io/name: hello
  ports:
    - name: http
      port: 80
      targetPort: http
